added python files

--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,22 @@
-Screenshots.xlsx
+delay_clean_SVM.txt
+delay_clean_SVMCOPY.txt
 delay_clean.csv
+delay_clean2K_SVM.txt
 delay_clean2K.csv
 delay_clean2K.txt
-delay_clean2K_SVM.txt
-delay_clean_SVM.txt
-flightPGadmin.csv
+delay_cleanCOPY.csv
+FeatureImportances.xlsx
 flightdelay_data.csv
 flightdelay_nolatlng.csv
+flightPGadmin.csv
+for_test_SVM.txt
 for_test.csv
 for_test.txt
 for_test.xlsx
-for_test_SVM.txt
 mergefiles.csv
+Screenshots.xlsx
+Untested_Dataset.csv
+Untested_Dataset.xlsx
 
 
 config.py
