--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@ for_test.csv
 for_test.txt
 for_test.xlsx
 mergefiles.csv
+REDdelay_clean.csv
 Screenshots.xlsx
 Untested_Dataset.csv
 Untested_Dataset.xlsx
